--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
