--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "gensokanji",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -15,9 +15,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "destyle.css": "^3.0.2",
     "nuxt": "^2.15.8",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
+    "sass": "^1.52.2",
+    "sass-loader": "^10.2.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
