--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/date-fns": "^1.5.0",
     "body-scroll-lock": "^3.1.5",
     "core-js": "^3.19.3",
     "destyle.css": "^3.0.2",
