--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/date-fns": "^1.5.0",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "body-scroll-lock": "^3.1.5",
     "core-js": "^3.19.3",
     "destyle.css": "^3.0.2",
